# rag-chat-storage

./: .dockerignore  .env.example  Dockerfile  README.md  TASK.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 56b78ab5505d_initial.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
app/middleware/: logging.py  rate_limit.py
app/routers/: messages.py  sessions.py
app/services/: message_service.py  session_service.py
tests/: conftest.py  test_general.py  test_messages.py  test_rate_limit.py  test_sessions.py
